<resources>
    <string name="app_name">Tutoring Android</string>
    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="LoginButton">Login</string>
    <string name="SignUpButton">Sign Up</string>
    <string name="UsernameLabel">Username</string>
    <string name="PasswordLabel">Password</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register</string>
    <string name="registerButton">Register</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="bookings">"Bookings"</string>
    <string name="sessions">"Sessions"</string>
    <string name="courses">"Courses"</string>
    <string name="timeslots">"Time Slots"</string>
    <string name="settings">"Settings"</string>
    <string-array name="day_of_the_week">
        <item>MONDAY</item>
        <item>TUESDAY</item>
        <item>WEDNESDAY</item>
        <item>THURSDAY</item>
        <item>FRIDAY</item>
        <item>SATURDAY</item>
        <item>SUNDAY</item>
    </string-array>
</resources>
